# Airlock

./: .gitignore  GITHUB.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
airlock/: __init__.py  __main__.py  client.py  config.py  crypto.py  ingress.py  janitor.py  manifest.py  pipeline.py  release.py  review.py  scanner.py  securedelete.py  status.py  vault.py
docs/: ARCHITECTURE.md  SECURITY.md  USAGE.md
examples/: subproject_daily_pull.py
scripts/: git_push.bat  janitor.bat  pull.bat  release.bat  review.bat  run_ingress.bat  run_scanner.bat  run_tunnel.bat  setup.bat  status.bat
tests/: test_pipeline.py
